--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "start": "ts-node ./index.ts"
     },
     "devDependencies": {
+        "@types/node": "^14.14.31",
         "@typescript-eslint/eslint-plugin": "^4.15.2",
         "@typescript-eslint/parser": "^4.15.2",
         "eslint": "^7.20.0",
